--- a/www/css/signup.css
+++ b/www/css/signup.css
@@ -17,6 +17,8 @@ div {
 	color:#FFFFFF;
 	font-weight:bold;
 	padding: 20px;
+/*	border-radius: 20px/30px;*/
+	border-radius: 10px;
 	}
 
 .comment {
@@ -37,9 +39,11 @@ a {
 input {
 	width:800px; 
 	height:30px; 
-	font-family:tahoma; 
-	font-size:11px; 
-	border:1px solid #00AAFF 
+	font-family:sans-serif; 
+	font-size:20px; 
+	border:1px solid #00AAFF;
+	color:#666666;
+	border-radius: 5px;
 	}
 
 .CreateAcc {
@@ -47,6 +51,7 @@ input {
 	background-color:#002250;
 	color:#FFFFFF;
 	border:1px solid white;
+	font-size:12px; 
 	font-weight:bold;
 	}
 		
