--- a/www/css/signup.css
+++ b/www/css/signup.css
@@ -29,6 +29,13 @@ div {
 	line-height: 0.7;
 	}
 
+.verifyemail {
+	font-family:sans-serif;
+	font-weight:100;
+	font-size:15px;
+	color:#cceeff;
+	}
+
 a {
   text-transform: uppercase;
   color:#FFFFFF;
