--- a/www/css/signup.css
+++ b/www/css/signup.css
@@ -31,8 +31,9 @@ div {
 
 .verifyemail {
 	font-family:sans-serif;
-	font-weight:100;
-	font-size:15px;
+	font-weight:200;
+	/*font-size:17px;*/
+	font-size-adjust:17px;
 	color:#cceeff;
 	}
 
